テスト/src/objects/progress_SFO__c.object
<CustomObject>
    <fields>
        <fullName>order__c</fullName>
        <label>案件</label>
        <referenceTo>order_SFO__c</referenceTo>
        <relationshipName>progress_order</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>order_name__c</fullName>
        <formula>order__r.ordername__c</formula>
        <label>案件名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>order_start__c</fullName>
        <formula>order__r.order_start_date__c</formula>
        <label>開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>order_type__c</fullName>
        <formula>TEXT ( order__r.ordertype__c )</formula>
        <label>案件種別</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>progress_list__c</fullName>
        <inlineHelpText>リーダーの皆さんの感覚でOKです。小さな問題でも、早めに「黄」を選択して、マネージャーに相談をしてください。</inlineHelpText>
        <label>進捗区分</label>
        <picklist>
            <picklistValues>
                <fullName>青（順調）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>黄（問題あり）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>赤（間に合わない可能性）</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>report__c</fullName>
        <label>進捗詳細</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>report_date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>報告日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>scheduled_date__c</fullName>
        <formula>order__r.scheduled_date__c</formula>
        <label>終了予定日</label>
        <type>Date</type>
    </fields>
    <label>進捗状況</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>PR{yymmdd}{000}</displayFormat>
        <label>進捗No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>